# resume-aligner

./: Anand-Hiremath_12+Exp_Resume.docx  Anand-Hiremath_12+Exp_Resume_aligned_infosys.docx  Anand-Hiremath_12+Exp_Resume_aligned_nokia.docx  PUSH_TO_PERSONAL_REPO.md  RESUME_ALIGNER_README.md  align_resume_from_main.py  assign.py  batch_resume_aligner.py  main.py  pyproject.toml  resume_aligner.py  resume_template.txt  setup_personal_repo.ps1  test.py
